# inventorysubmission

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  unleashed-integration.yml
app/: __init__.py  config.py  database.py  enums.py  main.py  models.py  scheduler.py  security.py  templating.py
app/integrations/: unleashed.py
app/routers/: admin.py  auth.py  manager.py  scan.py  warehouse.py  webhooks.py
app/services/: attention_service.py  auto_submit_service.py  inventory_service.py  product_import.py  receipt_service.py  request_service.py  settings_service.py  sync_service.py  webhook_service.py
app/static/: scan.js  styles.css
app/templates/: base.html  employee_home.html  login.html  scan.html  scan_result.html  scan_unknown.html
app/templates/admin/: home.html  inventory.html  products.html  settings.html  stores.html  tags.html  users.html
app/templates/manager/: history.html  inventory.html  request_detail.html  requests.html
app/templates/partials/: attention.html  status_pill.html
app/templates/warehouse/: requests.html
scripts/: check_unleashed.py  generate_tags.py  seed.py
tests/: conftest.py  test_admin_crud.py  test_auto_submit.py  test_inventory_service.py  test_product_import.py  test_receipt_service.py  test_request_service.py  test_unleashed_integration.py  test_unleashed_signature.py  test_usability_features.py  test_webhook_service.py
